--- a/about.Rmd
+++ b/about.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "About this blog"
+title: "Just another microscopy blog"
 description: |
-  Some additional details about the blog
+  Posts on recent advances in light microscopy, tips for using NIS-Elements for Nikon microscopes, twitter post weekly round-ups, paper round-ups
 ---
 
 ```{r setup, include=FALSE}
