--- a/_posts/welcome/welcome.Rmd
+++ b/_posts/welcome/welcome.Rmd
@@ -1,13 +1,11 @@
 ---
 title: "Welcome to microscopy-threads"
 description: |
-  Welcome to our new blog, microscopy-threads. We hope you enjoy 
-  reading what we have to say!
+  Welcome to our new blog, microscopy-threads. The intention is to build a repository for advances in light microsacopy, as well as some acquisition and analysis routines for NIS-Elements 
 author:
-  - name: Nora Jones 
-    url: https://example.com/norajones
-    affiliation: Spacely Sprockets
-    affiliation_url: https://example.com/spacelysprokets
+  - name: Mark Rigby
+    affiliation: Advanced Imagaging Specialist for Nikon Insturments UK
+    affiliation_url: https://www.microscope.healthcare.nikon.com/
 date: 05-18-2020
 output:
   distill::distill_article:
