--- a/about.Rmd
+++ b/about.Rmd
@@ -7,3 +7,9 @@ description: |
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
+
+## Publications
+- Machado CB, Pluchon P, Harley P, Rigby M, Gonzalez Sabater V, Stevenson DC, Hynes S, Lowe A, Burrone J, Viasnoff V, Lieberam I (2019) In Vitro Modelling of Nerve-Muscle Connectivity in a Compartmentalised Tissue Culture Device. Adv Biosyst 3
+- Walker AS, Neves G, Grillo F, Jackson RE, Rigby M, O'Donnell C, Lowe AS, Vizcay-Barrena G, Fleck RA, Burrone J (2017) Distance-dependent gradient in NMDAR-driven spine calcium signals along tapering dendrites. Proc Natl Acad Sci U S A 114: E1986-E1995
+- Rigby M, Cull-Candy SG, Farrant M. Transmembrane AMPAR regulatory protein γ-2 is required for the modulation of GABA release by presynaptic AMPARs.J Neurosci. 2015 Mar 11;35(10):4203-14. doi: 10.1523/JNEUROSCI.4075-14.2015.
+- Bergerot A1, Rigby M, Bouvier G, Marcaggi P. Persistent posttetanic depression at cerebellar parallel fiber to Purkinje cell synapses. PLoS One. 2013 Jul 29;8(7):e70277. doi: 10.1371/journal.pone.0070277.
