--- a/_posts/NIS-Elements layouts/NIS-Elements layouts.Rmd
+++ b/_posts/NIS-Elements layouts/NIS-Elements layouts.Rmd
@@ -2,18 +2,24 @@
 title: "NIS-Elements Layouts"
 description: |
   NIS-Elements is a comprehensive acqusition and analysis software and as such can have a lot of buttons. However, this needn't be the case. Below are simplified layouts for different microscopes.
-#preview: 
-
+categories:
+  - NIS-Elements
+preview: images/preview.png
+draft: TRUE
 author:
   - name: Mark Rigby
     affiliation: Nikon Insturments UK
     position: Advanced Imaging Specialist
     affiliation_url: https://www.microscope.healthcare.nikon.com/
 date: "`r Sys.Date()`"
-output: distill::distill_article
+output:
+  distill::distill_article:
+    toc: true
+    toc_depth: 2
 ---
 
 ```{r setup, include=FALSE}
+library(knitr)
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
