--- a/_posts/05_2020 paper round-up/May 2020 paper round-up.Rmd
+++ b/_posts/05_2020 paper round-up/May 2020 paper round-up.Rmd
@@ -17,7 +17,6 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
-library(twitterwidget)
 library(knitr)
 ```
 
@@ -28,21 +27,30 @@ The first edition of the paper roundup appears to be heavily fluorophore-based. 
 mMaple3 and mEOS3.2 are currently the go to green/red photo-convertible fluoresent proteins for SMLM, however perhaps these new variants developed by Marathe et al now edge it. The newly developed mEosBrite variants that are reported to have higher quantum yield, and reduced cytotoxicity compared to the original mEos3.2.
 https://doi.org/10.1007/s10895-020-02537-8
 
-## Shadow super resolution imaging 
+## 3D light field voltage imaging
 
+Voltage imaging is taking off with the continuing improvement of genetically-encoded voltage indicators. This paper by .. et al addresses one of the major hurdles in voltage imaging, namely when voltage chanegs occur so quickly how do you capture the fluoresence changes from multiple structures located in different z-planes? Here they use Light field microscope (LFM) to reconstruct 3D volumes from  2D sCMOS images. LFM is achieved using an unconvential arrangement where a microlens array is positioned at the image plane of the microscope and the camera positioned at the back focal plane. The microlenses act to disperses the angular components of the collected image which can be used to infer objects’ axial positions
+
+https://www.biorxiv.org/content/10.1101/2020.05.22.108191v1.full.pdf+html
+
+
+## msGFP2: A photostable monomeric superfolder GFP
+
+There a few issues with GFP. Firstly it has a weak tendency to dimerize, which can cause artifactual clustering of tagged proteins. Secondly, GFP can misfold to form nonfluorescent aggregates. Valbuena et al. have designed msGFP2 that is both monomeric, and 'super-folded', thereby circumventing the aforementioned issues, respectively. In addition msGFP2 is reported to achieve similar rates of photo-bleaching exhibited by EGFP. Finally, the authors added alternative N- and C-terminal peptides into msGFP2 to reduce cytotoxicity. 
+
+https://www.biorxiv.org/content/10.1101/811588v1.full  
 
 
 ## sandSTORM
 
-Continuing the theme of improvements to SMLM, sandSTORM is a SMLM method similar to dSTORM that uses self-activated photoblinking of Nitrogen Vacancy (NV) centers in nanosized diamonds to temproally separate overlapping single molecules, rather than Alexa647. Blinking of the photo-luminescence is thought to occur as the charge state of the NV centres changes as a result of photoionization when in the presence of sufficient electrolytes and continuous illumination.
+Continuing the theme of improvements to SMLM, sandSTORM is a SMLM method similar to dSTORM that uses self-activated photoblinking of Nitrogen Vacancy (NV) centers in nanosized diamonds to temproally separate overlapping single molecules. Blinking of the photo-luminescence is thought to occur as the charge state of the NV centres changes as a result of photoionization when in the presence of sufficient electrolytes and continuous illumination.
 
 
-In comparison to tradititonal fluorophores used for dSTORM such as Alexa 647, the NV- centers were reported to have higher quantum yield, limited photo-bleaching, and low cytotoxicity. In addition as the NV centres switch between on and off states at high frequencies than the blinking of alexa 647, experimenters will be able to capture the 10,000s of images required over a shorter period (perhaps even facilitating live imaging). In addition, the NV centres do not require redox buffers and work in physiological solutions.
+In comparison to tradititonal fluorophores used for dSTORM, such as Alexa 647, the NV- centers were reported to have higher quantum yield, limited photo-bleaching, and low cytotoxicity. In addition as the NV centres switch between on and off states at high frequencies than the blinking of alexa 647, experimenters will be able to capture the 10,000s of images required over a shorter period (perhaps even facilitating live imaging). What is particualrly nice is that hee NV centres do not require redox buffers, and work in physiological solutions.
 
-The only thing I am worried about with fast switching fluorophores is their duty cycle. Are too many diamond centres on at the same time? This would limit the ability to separate fluorophores and reduce resolution, though perhaps overlapping peak separation algorithms may aid this such as HAWK (https://doi.org/10.1038/s41592-018-0072-5). The paper does report very high localisation accuracies so perhaps this is not an issue. 
+In the paper they used a 200mW 561nm laser, a commonly available wavelength in most laser beds, where they found the luminescence of the on and off states to be most separated. The ability to use lower laser powers is crucial as SMLM systems tend to use high powered lasers which are generally more unstable, or use magnification lenses to concentrate the laser power, but therby reduce the field of view that is illuminated. 
 
-
-In the paper they used a 200mW 561nm laser, a commonly available wavelenght in most laser beds, where they found the luminescence of the on and off states to be most separated. The ability to use lower laser powers is crucial as SMLM systems tend to use high powered lasers which are generally more unstable, or use magnification lenses to concentrate the laser power, but therby reduce the field of view that is illuminated. 
+One observation is that the NV centres used were relatively large (50nm)
 
 
 Paper uses an old Nikon TE2000, and the Nikon 1.49NA 100X TIRF lens. Would be interesting to try on the NSTORM 5 with Ti2 and PFS.
@@ -54,20 +62,11 @@ Let's hope it catches on like the original sandstorm https://www.youtube.com/wat
 
 
 ## post-SynTagMa and pre-SynTagMa 
-Calcium indiciators localised to presynaptic teminal and post-synaptic densities of neurons respectively. By chaning from green to red emitted fluoresence when the sense calcium, they mark synaptic activation. Thereby getting round the issue of temporal and spatial resolution reuqired to map large areas of synaptic activity. 
+Calcium indiciators localised to presynaptic teminal and post-synaptic densities of neurons respectively. By permanantly chaning from green to red emitted fluoresence when the sense calcium, they mark synaptic activation. This  getting round the issue of temporal and spatial resolution reuqired to map large areas of synaptic activity. 
 
 
 https://doi.org/10.1038/s41467-020-16315-4
 
 
-## Acknowledgments {.appendix}
-
-This is a place to recognize people and institutions. It may also be a good place
-to acknowledge and cite software that makes your work possible.
-
-## Author Contributions {.appendix}
-
-We strongly encourage you to include an author contributions statement briefly 
-describing what each author did.
 
 
