--- a/_posts/202005 twitter roundup/202005 twitter roundup.Rmd
+++ b/_posts/202005 twitter roundup/202005 twitter roundup.Rmd
@@ -29,7 +29,7 @@ library(knitr)
 ```
 
 
-## MesoSPIM version 5!  
+#### MesoSPIM version 5!  
 
 
 ```{r twitter 1, layout="l-body"}
@@ -43,7 +43,7 @@ twitterwidget('1158687219223339008')
 <br>
 <br>
 
-## Link to a nice video by Kurt on the influence of adding optical components to image and conjugate planes.  
+#### Link to a nice video by Kurt on the influence of adding optical components to image and conjugate planes.  
 
 
 ```{r twitter 2, layout="l-body"}
@@ -58,7 +58,7 @@ twitterwidget('1265452074227163141')
 <br>
 
 
-## Nice tool for drawing optical schematics.  
+#### Nice tool for drawing optical schematics.  
 
 
 ```{r twitter 3, layout="l-body"}
@@ -72,7 +72,7 @@ twitterwidget('1255512265148727296')
 <br>
 <br>
 
-## Nikon small world enteries for 2020 are now closed with the winners to be annoced 15th October  
+#### Nikon small world enteries for 2020 are now closed with the winners to be annoced 15th October  
 
 
 ```{r twitter 4, layout="l-body"}
@@ -80,7 +80,16 @@ twitterwidget('1255512265148727296')
 twitterwidget('1263121194955485191')
 
 ```
+<br>
+<br>
+<br>
+<br>
+<br>
 
+#### Another useful reminder about MicroscopyU
 
+```{r twitter 5, layout="l-body"}
 
+twitterwidget('1266040899932471298')
 
+```
